--- a/src/main/resources/templates/apps/business/platform/game/online/index.html
+++ b/src/main/resources/templates/apps/business/platform/game/online/index.html
@@ -10,6 +10,17 @@
 					<h1 class="site-h1" style="background-color:#FFFFFF;">
 						在线玩家列表<#if playersList??>（${playersList.totalElements}）</#if>
 					</h1>
+					<div class="user_online" style="height:60px;">
+						<form class="layui-form" action="">
+							<div class="layui-form-item">
+								<label class="layui-form-label" style="display: block;margin-top: 10px;text-align: center;width:50px;">用户名:</label>
+								<div class="layui-input-block" style="width:200px; display: block;float:left;">
+									<input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+								</div>
+								<button class="layui-btn layui-btn-radius layui-btn-normal" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;border-radius: 3px;margin-left: 50px;">查询</button>
+							</div>
+						</form>
+					</div>
 					<div class="row" style="padding:5px;">
 						<div class="col-lg-12">
 							<#if playersList?? && playersList.content??>
