--- a/src/main/resources/templates/apps/index.html
+++ b/src/main/resources/templates/apps/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="/js/ztree/zTreeStyle/zTreeStyle.css">
 <link rel="stylesheet" href="/js/select/css/select2.min.css"/>	
 <link rel="stylesheet" href="/css/beimi.css">
+<link rel="stylesheet" href="/css/iconfont.css">
 
 <script src="/js/jquery-1.10.2.min.js"></script>
 
