房卡记录界面链接

--- a/src/main/resources/templates/apps/business/platform/include/left.html
+++ b/src/main/resources/templates/apps/business/platform/include/left.html
@@ -47,10 +47,10 @@
 		<a class="layui-nav-title" href="javascript:;">交易管理</a>
 		<dl class="layui-nav-child">
 			<dd  <#if subtype?? && subtype == 'recharge'>class="layui-this"</#if>>
-				<a href="/apps/platform/room/recharge/index.html">房卡充值记录</a>
+				<a href="/roomCard/rechargeRecord">房卡充值记录</a>
 			</dd>
 			<dd  <#if subtype?? && subtype == 'use'>class="layui-this"</#if>>
-			<a href="/apps/platform/use/index.html">房卡使用记录</a>
+			<a href="/roomCard/toUseRecord">房卡使用记录</a>
 			</dd>
 			<dd  <#if subtype?? && subtype == 'approvel'>class="layui-this"</#if>>
 			<a href="/apps/platform/room/approvel/index.html">体现审批</a>
