交易管理充值及使用界面

--- a/src/main/resources/templates/apps/business/platform/room/recharge/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/recharge/index.html
@@ -6,69 +6,64 @@
     <div class="layui-body">
         <div class="layui-side-scroll">
             <div class="row">
+                <h1 class="site-h1" style="background-color:#FFFFFF;">
+                    房卡充值
+                </h1>
                 <div class="col-lg-12">
-                    <h1 class="site-h1" style="background-color:#FFFFFF;">
-                        111在线玩家列表<#if playersList??>（${playersList.totalElements}）</#if>
-                    </h1>
                     <div class="user_online" style="height:60px;">
                         <form class="layui-form" action="">
-                            <div class="layui-form-item">
-                                <label class="layui-form-label" style="display: block;margin-top: 10px;">用户名:</label>
-                                <div class="layui-input-block" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 5px;">
+                            <div class="layui-form-item" style="position: relative">
+                                <label class="layui-form-label " style="display: block;margin-top:10px; text-align: center;width:50px">用户名:</label>
+                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
+                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
-                                <button class="layui-btn layui-btn-radius layui-btn-normal" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;border-radius: 3px;margin-left: 50px;">查询</button>
+                                <label class="layui-form-label" style="display: block;margin-top:10px; text-align: center;width:80px">邀请码:</label>
+                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
+                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                </div>
+                                <label class="layui-form-label" style="display: block;margin-top:10px; text-align: center;width:100px">购买时间:</label>
+                                <div class="layui-inline col-lg-2 col-md-2 col-sm-2 col-xs-1">
+                                    <input type="text" class="layui-input" id="test1" style="margin-top: 10px;">
+                                </div>
+                                <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
+                                    <button class="layui-btn layui-btn-radius layui-btn-normal"
+                                            style="display: block; float:left; width:100px; height:40px;margin-top: 10px;border-radius: 3px">查询</button>
+                                </div>
                             </div>
                         </form>
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                                <table class="layui-table" lay-skin="line">
-                                    <thead>
+                            <table class="layui-table" lay-skin="line">
+                                <thead>
+                                <tr>
+                                    <th>序号</th>
+                                    <th>用户名</th>
+                                    <th>邀请码</th>
+                                    <th>充值时间</th>
+                                    <th>房卡数量</th>
+                                    <th>原价</th>
+                                    <th>优惠金额</th>
+                                    <th>支付金额</th>
+                                    <th>直接上家分润金额</th>
+                                    <th>间接上家分润金额</th>
+                                </tr>
+                                </thead>
+                                <tbody>
                                     <tr>
-                                        <th>序号</th>
-                                        <th>用户名</th>
-                                        <th>邀请码</th>
-                                        <th>充值时间</th>
-                                        <th>房卡数量</th>
-                                        <th>原价</th>
-                                        <th>优惠金额</th>
-                                        <th>支付金额</th>
-                                        <th>直接上家分润金额</th>
-                                        <th>间接上家分润金额</th>
-                                        <th style="white-space:nowrap;width:1%;" nowrap="nowrap">操作</th>
+                                        <td>s</td>
+                                        <td>s</td>
+                                        <td>s</td>
+                                        <td>s</td>
+                                        <td>s</td>
+                                        <td>s</td>
+                                        <td>s</td>
+                                        <td>s</td>
+                                        <td>s</td>
+                                        <td>s</td>
                                     </tr>
-                                    </thead>
-                                    <tbody>
-                                    <#list playersList.content as player>
-                                        <tr>
-                                            <td>${player.username!''}</td>
-                                            <td>${player.createtime?string('yyyy-MM-dd HH:mm:ss')}</td>
-                                            <td>${player.country!''}</td>
-                                            <td>${player.goldcoins!''}</td>
-                                            <td>${player.cards!''}</td>
-                                            <td>${player.diamonds!''}</td>
-                                            <td>
-                                                <#if player.online>
-                                                    <i class="layui-icon" style="color:#19a55d;">&#xe618;</i>
-                                                </#if>
-                                            </td>
-                                            <td>${player.ostype!''}</td>
-                                            <td>${player.browser!''}</td>
-                                            <td>
-                                                <#if player.disabled == false>
-                                                    <i class="layui-icon" style="color:#19a55d;">&#xe618;</i>
-                                                </#if>
-                                            </td>
-                                            <td style="white-space:nowrap;width:1%;" nowrap="nowrap">
-                                                <a href="/apps/platform/online/gameusers/edit.html?id=${player.id!''}" data-toggle="ajax" data-width="550" data-height="400" data-title="编辑用户信息"> <i class="layui-icon">&#xe642;</i>
-                                                    编辑
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    </#list>
-                                    </tbody>
-                                </table>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -76,9 +71,51 @@
         </div>
     </div>
 </div>
-
 <script>
     layui.use('element', function() {
         var element = layui.element;
     });
+
+    layui.use('laydate', function(){
+        var laydate = layui.laydate;
+
+        laydate.render({
+            elem: '#test1' //指定元素
+        });
+    });
+
+//    $.ajax({
+//        url: ".......",
+//        success: function (data) {
+//            data = JSON.parse(data);
+//            render(data);
+//        }
+//    });
+//    function render(data) {
+//        $("tbody").empty();
+//        $.each(data, function (i, v) {
+//            let html =
+//                    `
+//                <tr>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td>s</td>
+//                    <td style="white-space:nowrap;width:1%;" nowrap="nowrap">
+//                         <a href="/apps/platform/online/gameusers/edit.html?id=${player.id!''}" data-toggle="ajax" data-width="550" data-height="400" data-title="编辑用户信息"> <i class="layui-icon">&#xe642;</i>
+//                              编辑
+//                         </a>
+//                    </td>
+//                </tr>
+//                `
+//            $(html).appendTo($("tbody"));
+//        })
+//    }
 </script>
+
