--- a/src/main/resources/templates/apps/business/platform/room/recharge/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/recharge/index.html
@@ -1,7 +1,8 @@
 <div class="layui-layout layui-layout-content">
     <div class="layui-side layui-beimi-left">
         <div class="layui-side-scroll">
-            <#include "/apps/business/platform/include/left.html"/></div>
+            <#include "/apps/business/platform/include/left.html"/>
+        </div>
     </div>
     <div class="layui-body">
         <div class="layui-side-scroll">
@@ -13,109 +14,127 @@
                     <div class="user_online" style="height:60px;">
                         <form class="layui-form" action="">
                             <div class="layui-form-item" style="position: relative">
-                                <label class="layui-form-label " style="display: block;margin-top:10px; text-align: center;width:50px">用户名:</label>
-                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                <label class="layui-form-label "
+                                       style="display: block;margin-top:10px; text-align: center;width:50px">用户名:</label>
+                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1"
+                                     style="width:200px; display: block;float:left;">
+                                    <input type="text" name="title" required lay-verify="required" placeholder=""
+                                           autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
-                                <label class="layui-form-label" style="display: block;margin-top:10px; text-align: center;width:80px">邀请码:</label>
-                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                <label class="layui-form-label"
+                                       style="display: block;margin-top:10px; text-align: center;width:80px">邀请码:</label>
+                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1"
+                                     style="width:200px; display: block;float:left;">
+                                    <input type="text" name="title" required lay-verify="required" placeholder=""
+                                           autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
-                                <label class="layui-form-label" style="display: block;margin-top:10px; text-align: center;width:100px">购买时间:</label>
+                                <label class="layui-form-label"
+                                       style="display: block;margin-top:10px; text-align: center;width:100px">购买时间:</label>
                                 <div class="layui-inline col-lg-2 col-md-2 col-sm-2 col-xs-1">
                                     <input type="text" class="layui-input" id="test1" style="margin-top: 10px;">
                                 </div>
-                                <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
+                                <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1"
+                                     style="width: 100px;height:40px;float:right;">
                                     <button class="layui-btn layui-btn-radius layui-btn-normal"
-                                            style="display: block; float:left; width:100px; height:40px;margin-top: 10px;border-radius: 3px">查询</button>
+                                            style="display: block; float:left; width:100px; height:40px;margin-top: 10px;border-radius: 3px">
+                                        查询
+                                    </button>
                                 </div>
                             </div>
                         </form>
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-skin="line">
+                            <table class="layui-table" lay-data="{height:315, url:'http://www.layui.com/demo/table/user', page:true, id:'test'}" lay-filter="test">
                                 <thead>
                                 <tr>
-                                    <th>序号</th>
-                                    <th>用户名</th>
-                                    <th>邀请码</th>
-                                    <th>充值时间</th>
-                                    <th>房卡数量</th>
-                                    <th>原价</th>
-                                    <th>优惠金额</th>
-                                    <th>支付金额</th>
-                                    <th>直接上家分润金额</th>
-                                    <th>间接上家分润金额</th>
+                                    <th lay-data="{field:'index', width:140}">序号</th>
+                                    <th lay-data="{field:'userName',width:140}">用户名</th>
+                                    <th lay-data="{field:'invitationCode',width:140}">邀请码</th>
+                                    <th lay-data="{field:'rechargeTime',width:150}">充值时间</th>
+                                    <th lay-data="{field:'roomCount',width:150}">房卡数量</th>
+                                    <th lay-data="{field:'originalPrice',width:140}">原价</th>
+                                    <th lay-data="{field:'preferentialAmount',width:150}">优惠金额</th>
+                                    <th lay-data="{field:'payAmount',width:150}">支付金额</th>
+                                    <th lay-data="{field:'directlyTheLastAmount', width:150}">直接上家分润金额</th>
+                                    <th lay-data="{field:'indirectTheLastAmount', width:150}">间接上家分润金额</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>s</td>
-                                        <td>s</td>
-                                        <td>s</td>
-                                        <td>s</td>
-                                        <td>s</td>
-                                        <td>s</td>
-                                        <td>s</td>
-                                        <td>s</td>
-                                        <td>s</td>
-                                        <td>s</td>
-                                    </tr>
                                 </tbody>
                             </table>
                         </div>
                     </div>
                 </div>
             </div>
+            <div id="demo7" style="position: absolute;bottom:50px;left:150px;">
+                <div class="layui-box layui-laypage layui-laypage-default" id="layui-laypage-10">
+                    <span class="layui-laypage-count">共 100 条</span>
+                    <a href="javascript:;" class="layui-laypage-prev"
+                       data-page="6">
+                        上一页
+                    </a>
+                    <a href="javascript:;" class="layui-laypage-first" data-page="1" title="首页">
+                        1
+                    </a>
+                    <span class="layui-laypage-spr">…</span>
+                    <a href="javascript:;" data-page="5">5</a>
+                    <a href="javascript:;" data-page="6">6</a>
+                    <span class="layui-laypage-curr">
+                        <em class="layui-laypage-em"></em>
+                        <em>7</em>
+                    </span>
+                    <a href="javascript:;" data-page="8">8</a>
+                    <a href="javascript:;" data-page="9">9</a>
+                    <a href="javascript:;" class="layui-laypage-last" title="尾页" data-page="10">10</a>
+                    <a href="javascript:;" class="layui-laypage-next" data-page="8">下一页</a>
+                    <span class="layui-laypage-limits">
+                        <select lay-ignore="">
+                            <option value="10" selected="">10 条/页</option>
+                            <option value="20">20 条/页</option>
+                            <option value="30">30 条/页</option>
+                            <option value="40">40 条/页</option>
+                            <option value="50">50 条/页</option>
+                        </select>
+                    </span>
+                    <span class="layui-laypage-skip">到第
+                        <input type="text" min="1" value="7" class="layui-input">页
+                        <button type="button" class="layui-laypage-btn">确定</button>
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <script>
-    layui.use('element', function() {
+    layui.use('element', function () {
         var element = layui.element;
     });
 
-    layui.use('laydate', function(){
+//日期表格
+    layui.use('laydate', function () {
         var laydate = layui.laydate;
-
         laydate.render({
             elem: '#test1' //指定元素
         });
     });
 
-//    $.ajax({
-//        url: ".......",
-//        success: function (data) {
-//            data = JSON.parse(data);
-//            render(data);
-//        }
-//    });
-//    function render(data) {
-//        $("tbody").empty();
-//        $.each(data, function (i, v) {
-//            let html =
-//                    `
-//                <tr>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td>s</td>
-//                    <td style="white-space:nowrap;width:1%;" nowrap="nowrap">
-//                         <a href="/apps/platform/online/gameusers/edit.html?id=${player.id!''}" data-toggle="ajax" data-width="550" data-height="400" data-title="编辑用户信息"> <i class="layui-icon">&#xe642;</i>
-//                              编辑
-//                         </a>
-//                    </td>
-//                </tr>
-//                `
-//            $(html).appendTo($("tbody"));
-//        })
-//    }
+//表格
+    layui.use('table', function(){
+        var table = layui.table;
+    });
+
+//分页
+    laypage.render({
+        elem: 'pageDemo'
+        ,count: 100
+        ,skin: '#1E9FFF'
+        ,jump: function(obj, first){
+            if(!first){
+                layer.msg('第'+ obj.curr +'页');
+            }
+        }
+    });
+
 </script>
 
