--- a/src/main/resources/templates/apps/business/platform/room/recharge/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/recharge/index.html
@@ -45,10 +45,10 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{height:315, url:'http://www.layui.com/demo/table/user', page:true, id:'test'}" lay-filter="test">
+                            <table class="layui-table" lay-data="{height:315, url:'/roomCard/getRechargeJson', page:true, id:'test'}" lay-filter="test">
                                 <thead>
                                 <tr>
-                                    <th lay-data="{field:'index', width:140}">序号</th>
+                                    <th lay-data="{field:'id', width:140}">序号</th>
                                     <th lay-data="{field:'userName',width:140}">用户名</th>
                                     <th lay-data="{field:'invitationCode',width:140}">邀请码</th>
                                     <th lay-data="{field:'rechargeTime',width:150}">充值时间</th>
