界面跳转路径

--- a/src/main/resources/templates/apps/business/platform/include/left.html
+++ b/src/main/resources/templates/apps/business/platform/include/left.html
@@ -53,10 +53,10 @@
 			<a href="/roomCard/toUseRecord">房卡使用记录</a>
 			</dd>
 			<dd  <#if subtype?? && subtype == 'approvel'>class="layui-this"</#if>>
-			<a href="/apps/platform/room/approvel/index.html">体现审批</a>
+			<a href="/presentapp/index">提现审批</a>
 			</dd>
 			<dd  <#if subtype?? && subtype == 'management'>class="layui-this"</#if>>
-			<a href="/apps/platform/room/management/index.html">分润管理</a>
+			<a href="/promanagement/index">分润管理</a>
 			</dd>
 		</dl>
 	</li>
