--- a/src/main/resources/templates/apps/business/platform/room/use/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/use/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{url:'/roomCard/getToUseJson', page:true, id:'test'}" lay-filter="test">
+                            <table class="layui-table" lay-data="{height:640,url:'/roomCard/getToUseJson', page:true, id:'test'}" lay-filter="test">
                                 <thead>
                                 <tr>
                                     <th lay-data="{field:'id', width:260}">序号</th>
