--- a/src/main/resources/templates/apps/business/platform/room/approvel/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/approvel/index.html
@@ -51,7 +51,7 @@
                                     </div>
                                 </div>
                                 <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
-                                    <button class="layui-btn layui-btn-radius layui-btn-normal" type="button" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;margin-left: -230px;border-radius: 3px">
+                                    <button class="layui-btn layui-btn-radius layui-btn-normal" type="submit" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;margin-left: -230px;border-radius: 3px">
                                         查询
                                     </button>
                                 </div>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{height:640,url:'/presentapp/findPresentappList', page:true, id:'test'}" lay-filter="test">
+                            <table class="layui-table" lay-data="{height:640,url:'/presentapp/findPresentappList', page:true, id:'test'}" lay-filter="test" id="box">
                                 <thead style="width: 100%">
                                 <tr>
                                     <th lay-data="{field:'id', width:140}">序号</th>
@@ -97,5 +97,43 @@
         var table = layui.table;
     });
 
+    (function () {
+        var getListUrl = '';
+        var tableOptions = {
+            url: getListUrl, //请求地址
+            method: 'POST', //方式
+            id: 'box', //生成 Layui table 的标识 id
+            page: false, //是否分页
+            where: { type: "all" }, //请求后端接口的条件type
+            response: {
+                statusName: 'Code', //状态字段名称
+                statusCode: '200', //状态字段成功值
+                msgName: 'Message', //消息字段
+                countName: 'Total', //总数字段
+                dataName: 'Result' //数据字段
+            }
+        };
+        layui.use(['table', 'layer'], function () {
+            var layer = layui.layer, table = layui.table;
+
+            //表初始化
+            var createTable = function () {
+                table.init('EditListTable', tableOptions);
+            };
+
+            //表刷新方法
+            var reloadTable = function (item) {
+                table.reload("listReload", { //此处是上文提到的 初始化标识id
+                    where: {
+                        //key: { //该写法上文已经提到
+                        type: item.type, id: item.id
+                        //}
+                    }
+                });
+            };
+            createTable();
+
+        });
+    })();
 </script>
 
