--- a/src/main/resources/templates/apps/business/platform/room/management/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/management/index.html
@@ -17,16 +17,16 @@
                                     用户名:
                                 </label>
                                 <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                    <input type="text" id="managesnames" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
                                 <label class="layui-form-label" style="display: block;margin-top:10px; text-align: center;width:80px">
                                     邀请码:
                                 </label>
                                 <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                    <input type="text" id="codes" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
                                 <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
-                                    <button class="layui-btn layui-btn-radius layui-btn-normal" style="display: block; float:left; width:100px; height:40px;position: absolute;top: 10px;left:700px;border-radius: 3px">
+                                    <button id="btn" class="layui-btn layui-btn-radius layui-btn-normal" style="display: block; float:left; width:100px; height:40px;position: absolute;top: 10px;left:700px;border-radius: 3px">
                                         查询
                                     </button>
                                 </div>
@@ -35,14 +35,14 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{height:640,url:'/promanagement/findProManagementList', page:true, id:'test'}" lay-filter="test">
+                            <table class="layui-table" lay-data="{height:640,url:'/promanagement/findProManagementList', page:true, id:'test'}" lay-filter="test" id="box">
                                 <thead>
                                 <tr>
                                     <th lay-data="{field:'id', width:260}">序号</th>
                                     <th lay-data="{field:'userName',width:260}">用户名</th>
                                     <th lay-data="{field:'invitationCode',width:260}">邀请码</th>
                                     <th lay-data="{field:'getProAmount',width:260}">获得分润金额</th>
-                                    <th lay-data="{field:'nickname',width:260}">来源人姓名</th>
+                                    <th lay-data="{field:'nickName',width:260}">来源人姓名</th>
                                     <th lay-data="{field:'gainTime',width:262}">获得时间</th>
                                     <th lay-data="{field:'amountMoney',width:262}">提现金额</th>
                                     <th lay-data="{field:'appTime',width:262}">提现时间</th>
@@ -69,6 +69,27 @@
     layui.use('table', function(){
         var table = layui.table;
     });
+
+    var userName = sessionStorage.getItem("managesnames");
+    var invitationCode = sessionStorage.getItem("codes");
+    if(userName !="" && invitationCode !=""){
+        document.getElementById("managesnames").value = userName;
+        document.getElementById("codes").value = invitationCode;
+        var tablebox =document.getElementById("box").getAttribute("lay-data");
+        var tableboxUrl = "/promanagement/findProManagementList?userName="+userName+"&invitationCode="+invitationCode;
+        document.getElementById("box").setAttribute("lay-data","{height:640,url:'"+tableboxUrl+"', page:true, id:'test'}");
+    }
+
+    //搜索框代码
+    $(function(){
+        $("#btn").click(function(){
+            var txt=$("#managesnames").val();
+            var txtserach=$("#codes").val();
+            var userName = sessionStorage.setItem("managesnames",txt);
+            var invitationCode=sessionStorage.setItem("codes",txtserach);
+            location.reload();
+        });
+    })
 </script>
 
 
