--- a/src/main/resources/templates/apps/business/platform/room/use/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/use/index.html
@@ -17,16 +17,16 @@
                                     用户名:
                                 </label>
                                 <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                    <input type="texts" id="txtNames" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
                                 <label class="layui-form-label" style="display: block;margin-top:10px; text-align: center;width:80px">
                                     邀请码:
                                 </label>
                                 <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                    <input type="search" id="search" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
                                 <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
-                                    <button class="layui-btn layui-btn-radius layui-btn-normal" style="display: block; float:left; width:100px; height:40px;position: absolute;top: 10px;left:700px;border-radius: 3px">
+                                    <button type="button" class="layui-btn layui-btn-radius layui-btn-normal" style="display: block; float:left; width:100px; height:40px;position: absolute;top: 10px;left:700px;border-radius: 3px">
                                         查询
                                     </button>
                                 </div>
@@ -35,7 +35,7 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{height:640,url:'/roomCard/getToUseJson', page:true, id:'test'}" lay-filter="test">
+                            <table class="layui-table" lay-data="{height:640,url:'/roomCard/getToUseJson', page:true, id:'test'}" lay-filter="test" id="box">
                                 <thead>
                                 <tr>
                                     <th lay-data="{field:'id', width:260}">序号</th>
@@ -58,6 +58,17 @@
 </div>
 <script src="" charset="utf-8"></script>
 <script>
+
+    var userName = sessionStorage.getItem("toUseName");
+    var invitationCode = sessionStorage.getItem("invitationCode");
+    if(userName !="" && invitationCode !=""){
+        document.getElementById("txtNames").value = userName;
+        document.getElementById("search").value = invitationCode;
+        var tablebox =document.getElementById("box").getAttribute("lay-data");
+        var tableboxUrl = "/roomCard/getToUseJson?userName="+userName+"&invitationCode="+invitationCode;
+        document.getElementById("box").setAttribute("lay-data","{height:640,url:'"+tableboxUrl+"', page:true, id:'test'}");
+    }
+
     layui.use('element', function() {
         var element = layui.element;
     });
@@ -66,6 +77,17 @@
     layui.use('table', function(){
         var table = layui.table;
     });
+
+    //搜索框代码
+    $(function(){
+        $("button[type=button]").click(function(){
+            var txt=$("#txtNames").val();
+            var txtserach=$("#search").val();
+            var userName = sessionStorage.setItem("toUseName",txt);
+            var invitationCode=sessionStorage.setItem("invitationCode",txtserach);
+            location.reload();
+        });
+    })
 </script>
 
 
