--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
@@ -12,6 +12,7 @@
 支付金额：<input type="number" id="money"/>
 <button id="btnWxPay">微信支付</button>
 <script src="../../../js/mui.min.js?v=1.1"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" charset="utf-8">
     var userName = "${userName}";
     if(userName == ""){
