--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
@@ -9,7 +9,7 @@
 <body>
 <button id="btnWx">微信授权</button>
 <div id="userName"></div>
-支付金额：<input type="number" id="money"/>
+支付金额：<input type="number" id="money" value="0.01"/>
 <button id="btnWxPay">微信支付</button>
 <script src="../../../js/mui.min.js?v=1.1"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
