--- a/src/main/resources/templates/apps/business/platform/room/recharge/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/recharge/index.html
@@ -18,13 +18,13 @@
                                     用户名:
                                 </label>
                                 <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                    <input type="text" id="rechange_name" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
                                 <label class="layui-form-label" style="display: block;margin-top:10px; text-align:center;width:80px;">
                                     邀请码:
                                 </label>
                                 <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                    <input type="text" id="rechange_code" name="title" required lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
                                 </div>
                                 <div class="layui-inline" style="margin-top: 10px;">
                                     <label class="layui-form-label">购买时间:</label>
@@ -37,7 +37,7 @@
                                     </div>
                                 </div>
                                 <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
-                                    <button class="layui-btn layui-btn-radius layui-btn-normal" type="button" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;margin-left:-400px;border-radius: 3px">
+                                    <button class="layui-btn layui-btn-radius layui-btn-normal" onclick="queryTj()" type="button" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;margin-left:-400px;border-radius: 3px">
                                         查询
                                     </button>
                                 </div>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{height:640,url:'/roomCard/getRechargeJson', page:true, id:'test'}" lay-filter="test">
+                            <table class="layui-table" id="recharge_table" lay-data="{height:640,url:'/roomCard/getRechargeJson?userName=&invitationCode=', page:true, id:'test'}" lay-filter="test">
                                 <thead style="width: 100%">
                                 <tr>
                                     <th lay-data="{field:'id', width:180}">序号</th>
@@ -72,35 +72,46 @@
     </div>
 </div>
 <script>
-    layui.use('element', function () {
-        var element = layui.element;
-    });
-
-//后台数据
-    layui.use('table', function(){
-        var table = layui.table;
-    });
-
-//搜索框代码
-    var userName = sessionStorage.getItem("recharge");
-    var invitationCode = sessionStorage.getItem("invitationCode");
-    if(userName !="" && invitationCode !=""){
-        document.getElementById("txtNames").value = userName;
-        document.getElementById("search").value = invitationCode;
-        var tablebox =document.getElementById("box").getAttribute("lay-data");
-        var tableboxUrl = "/roomCard/getToUseJson?userName="+userName+"&invitationCode="+invitationCode;
-        document.getElementById("box").setAttribute("lay-data","{height:640,url:'"+tableboxUrl+"', page:true, id:'test'}");
+    var userName,invitationCode;
+    if(sessionStorage.getItem("status") == 1){
+        userName = sessionStorage.getItem("recharge");
+        invitationCode = sessionStorage.getItem("invitationCode");
+        sessionStorage.removeItem("status");
+    }
+    //搜索框代码
+    if(userName != "" && userName != null){
+        document.getElementById("rechange_name").value = userName;
+        userName = "userName="+userName;
+    }else{
+        userName = "userName=";
+    }
+    if(invitationCode != "" && invitationCode != null){
+        document.getElementById("rechange_code").value = invitationCode;
+        invitationCode = "invitationCode="+invitationCode;
+    }else{
+        invitationCode = "invitationCode=";
     }
 
+    var tablebox =document.getElementById("recharge_table").getAttribute("lay-data");
+    var tableboxUrl = "/roomCard/getRechargeJson?"+userName+"&"+invitationCode;
+    document.getElementById("recharge_table").setAttribute("lay-data","{height:640,url:'"+tableboxUrl+"', page:true, id:'test'}");
 
-    $(function(){
-        $("button[type=button]").click(function(){
-            var txt=$("#txtNames").val();
-            var txtserach=$("#search").val();
-            var userName = sessionStorage.setItem("recharge",txt);
-            var invitationCode=sessionStorage.setItem("invitationCode",txtserach);
-            location.reload();
-        });
-    })
+layui.use('element', function () {
+    var element = layui.element;
+});
+
+//后台数据
+layui.use('table', function(){
+    var table = layui.table;
+});
+    function queryTj(){
+        var txt=$("#rechange_name").val();
+        var txtserach=$("#rechange_code").val();
+        sessionStorage.setItem("recharge",txt);
+        sessionStorage.setItem("invitationCode",txtserach);
+
+        sessionStorage.setItem("status",1);
+        location.reload();
+    }
 </script>
 
