--- a/src/main/resources/templates/apps/business/platform/room/recharge/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/recharge/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" id="recharge_table" lay-data="{height:640,url:'/roomCard/getRechargeJson?userName=&invitationCode=', page:true, id:'test'}" lay-filter="test">
+                            <table class="layui-table" id="recharge_table" lay-filter="test">
                                 <thead style="width: 100%">
                                 <tr>
                                     <th lay-data="{field:'id', width:180}">序号</th>
@@ -72,46 +72,32 @@
     </div>
 </div>
 <script>
-    var userName,invitationCode;
-    if(sessionStorage.getItem("status") == 1){
-        userName = sessionStorage.getItem("recharge");
-        invitationCode = sessionStorage.getItem("invitationCode");
-        sessionStorage.removeItem("status");
-    }
-    //搜索框代码
-    if(userName != "" && userName != null){
-        document.getElementById("rechange_name").value = userName;
-        userName = "userName="+userName;
-    }else{
-        userName = "userName=";
-    }
-    if(invitationCode != "" && invitationCode != null){
-        document.getElementById("rechange_code").value = invitationCode;
-        invitationCode = "invitationCode="+invitationCode;
-    }else{
-        invitationCode = "invitationCode=";
-    }
-
-    var tablebox =document.getElementById("recharge_table").getAttribute("lay-data");
-    var tableboxUrl = "/roomCard/getRechargeJson?"+userName+"&"+invitationCode;
-    document.getElementById("recharge_table").setAttribute("lay-data","{height:640,url:'"+tableboxUrl+"', page:true, id:'test'}");
 
 layui.use('element', function () {
     var element = layui.element;
 });
-
+var table;
 //后台数据
 layui.use('table', function(){
-    var table = layui.table;
+    table = layui.table;
+    table.render({height:640,url:'/roomCard/getRechargeJson', page:true, id:'test',where: {userName:"f",invitationCode: ""}});
 });
     function queryTj(){
         var txt=$("#rechange_name").val();
         var txtserach=$("#rechange_code").val();
-        sessionStorage.setItem("recharge",txt);
-        sessionStorage.setItem("invitationCode",txtserach);
-
-        sessionStorage.setItem("status",1);
-        location.reload();
+//        tableObj.reload('test', {
+//            where: { //设定异步数据接口的额外参数，任意设
+//                userName:txt,
+//                invitationCode: txtserach
+//            }
+//        });
+        table.render({ //其它参数在此省略
+            height:640,url:'/roomCard/getRechargeJson',
+            where: { //设定异步数据接口的额外参数，任意设
+                userName:"",
+                invitationCode: ""
+            }
+        });
     }
 </script>
-
+<!--  table.render({height:640,url:'/roomCard/getRechargeJson',where: {userName:"",invitationCode: ""}});  -->
