时间类型处理

--- a/src/main/resources/templates/apps/business/platform/room/recharge/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/recharge/index.html
@@ -81,7 +81,7 @@
                 {field:'id', width:150 , title:'编码'},
                 {field:'userName',width:180 , title:'用户名'},
                 {field:'invitationCode',width:180 , title:'邀请码'},
-                {field:'rechargeTime',width:180 , title:'充值时间'},
+                {field:'rechangeTimes',width:180 , title:'充值时间'},
                 {field:'roomCount',width:130 , title:'房卡数量'},
                 {field:'payAmount',width:130 , title:'支付金额'},
                 {field:'directlyTheLastAmount', width:180 , title:'直接上家分润金额'},
