--- a/src/main/resources/templates/apps/business/platform/room/use/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/use/index.html
@@ -66,7 +66,7 @@
                 {field:'id', width:260 , title:'编码'},
                 {field:'userName',width:260 , title:'用户名'},
                 {field:'invitationCode',width:260 , title:'邀请码'},
-                {field:'useTime',width:260 , title:'使用时间'},
+                {field:'useTimes',width:260 , title:'使用时间'},
                 {field:'useRoomCount',width:260 , title:'使用房卡数量'},
                 {field:'surplusRoomCount',width:262 , title:'剩余房卡数量'},
             ]]
