注册玩家状态

--- a/src/main/resources/templates/apps/business/platform/room/approvel/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/approvel/index.html
@@ -107,6 +107,8 @@
                         //tr行元素 状态td位置  子元素内容
                         tableTr[i].children[6].children[0].innerHTML = '审核';
                     }
+                    //时间设置
+                    tableTr[i].children[4].children[0].innerHTML = formatDateTime(res.data[i].presentAppTime);
                 }
             }
         });
@@ -121,5 +123,21 @@
         });
     }
 
+    //时间转换js
+    function formatDateTime(inputTime) {
+        var date = new Date(inputTime);
+        var y = date.getFullYear();
+        var m = date.getMonth() + 1;
+        m = m < 10 ? ('0' + m) : m;
+        var d = date.getDate();
+        d = d < 10 ? ('0' + d) : d;
+        var h = date.getHours();
+        h = h < 10 ? ('0' + h) : h;
+        var minute = date.getMinutes();
+        var second = date.getSeconds();
+        minute = minute < 10 ? ('0' + minute) : minute;
+        second = second < 10 ? ('0' + second) : second;
+        return y + '-' + m + '-' + d+' '+h+':'+minute+':'+second;
+    };
 </script>
 
