后台管理界面完成

--- a/src/main/resources/templates/apps/business/platform/include/left.html
+++ b/src/main/resources/templates/apps/business/platform/include/left.html
@@ -56,7 +56,10 @@
 			<a href="/presentapp/index">提现审批</a>
 			</dd>
 			<dd  <#if subtype?? && subtype == 'management'>class="layui-this"</#if>>
-			<a href="/promanagement/index">分润管理</a>
+			<a href="/promanagement/index">提现历史</a>
+			</dd>
+			<dd  <#if subtype?? && subtype == 'management'>class="layui-this"</#if>>
+			<a href="/runhistory/runHistoryUrl">分润历史</a>
 			</dd>
 		</dl>
 	</li>
