--- a/src/main/resources/templates/apps/business/platform/room/management/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/management/index.html
@@ -7,7 +7,7 @@
         <div class="layui-side-scroll">
             <div class="row">
                 <h1 class="site-h1" style="background-color:#FFFFFF;">
-                    分润管理后台管理界面
+                   提现历史后台管理界面
                 </h1>
                 <div class="col-lg-12">
                     <div class="user_online" style="height:60px;">
@@ -65,9 +65,9 @@
                 {field:'id', width:170 , title:'编码'},
                 {field:'userName',width:170 , title:'用户名'},
                 {field:'invitationCode',width:170 , title:'邀请码'},
-                {field:'getProAmount',width:170 , title:'获得分润金额'},
-                {field:'nickName',width:170 , title:'来源人姓名'},
-                {field:'gainTime',width:170 , title:'获得时间'},
+//                {field:'getProAmount',width:170 , title:'获得分润金额'},
+//                {field:'nickName',width:170 , title:'来源人姓名'},
+//                {field:'gainTime',width:170 , title:'获得时间'},
                 {field:'amountMoney',width:170 , title:'提现金额'},
                 {field:'appTime',width:170 , title:'提现时间'},
                 {field:'trtProfit',width:170 , title:'分润剩余总额'}
